traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-public
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
      - name: traefik
        image: traefik:2.7
        args:
        - --api.insecure
        - --providers.kubernetesingress
        ports:
        - name: web
          containerPort: 80
        - name: admin
          containerPort: 8080
