traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-public
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30021
      name: web
    - protocol: TCP
      port: 8080
      nodePort: 30042
      name: admin
  selector:
    app: traefik
